fixed dark mode issue, added redirect

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 :root {
+  --text-color: #213547;
+  --background-color: #ffffff;
+  --link-hover-color: #747bff;
+  --button-background: #f9f9f9;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -26,7 +30,7 @@ a {
 }
 
 a:hover {
-  color: #535bf2;
+  color: var(--link-hover-color);
 }
 
 html,
@@ -37,7 +41,8 @@ body {
 }
 
 body {
-  background-color: white;
+  color: var(--text-color);
+  background-color: var(--background-color);
   margin: 0;
   display: flex;
   min-width: 320px;
@@ -85,7 +90,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--button-background);
   cursor: pointer;
   transition: border-color 0.25s;
   margin: 10px;
@@ -96,6 +101,15 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --text-color: #ffffff;
+    --background-color: #242424;
+    --link-hover-color: #646cff;
+    --button-background: #1a1a1a;
+  }
 }
 
 .nav-bar {
